build: User story 1

--- a/app/views/computer_stores/index.html.erb
+++ b/app/views/computer_stores/index.html.erb
@@ -1,6 +1,4 @@
-<h1>Computer Store</h1>
+<h1>Computer Stores</h1>
 <% @computer_stores.each do |store| %>
-    <h2> Store: <%= store.name %> </h2>
-    <p> Location: <%= store.location %> </p>
-    <p> Offer Repairs: <%= store.repairs %> </p>
+    <h2><%= store.name %> </h2>
 <% end %>
